GNOME Bugzilla – Bug 711011
y4mencode: fix uninitialized variable warning
Last modified: 2013-10-28 14:29:46 UTC
Fix unintialized variable warning reported by apple llvm 5.0 on osx >= 10.8.5.
Created attachment 258302 [details] [review] y4menc: fix uninitialized variable warning
Thanks, pushed. (Fixed typo in commit message) commit ec8c141d6a558476817987a193cb77d62aadac4b Author: Matthieu Bouron <matthieu.bouron@collabora.com> Date: Mon Oct 28 13:31:34 2013 +0000 y4menc: fix uninitialized variable warning https://bugzilla.gnome.org/show_bug.cgi?id=711011